--- a/tmpl/register.html
+++ b/tmpl/register.html
@@ -1,4 +1,7 @@
-<form action='' method='post'>
+<form action='' method='post'>{% csrf_token %}
+	{% if messages %}
+	Error!
+	{% endif %}
 	{{ form.as_p }}
 	<input type='submit' value='Submit' />
 </form>
