--- a/tmpl/register.html
+++ b/tmpl/register.html
@@ -1,6 +1,6 @@
 <form action='' method='post'>{% csrf_token %}
-	{% if messages %}
-	Error!
+	{% if error %}
+		{{ error }}
 	{% endif %}
 	{{ form.as_p }}
 	<input type='submit' value='Submit' />
