--- a/tmpl/aplysia/base.html
+++ b/tmpl/aplysia/base.html
@@ -2,7 +2,8 @@
 <html>
 	<head>
 		<title>{{ title }}</title>
-		<link href="/rainy_collect/css/{{css}}.css" rel="stylesheet" type="text/css" media="screen" />
+		<link href='/rainy_collect/css/{{css}}.less' rel='stylesheet/less' type='text/css'>
+		<script type='text/javascript' src='/rainy_collect/js/less-1.3.0.min.js'></script>
 	</head>
 	<body>
 		{% block body %}
